Fixed WSOD bug when the maximum number of events to be processed is exceeded.
Now, process the generated exception up to the maximum number of events then 
throws an error since the exception handling exceeded the maximum events for the
second time.
(2007-02-08 pfarrell)

------------------------------------------------
Improvements / Enhancements
------------------------------------------------
* Added AnnounceEventInModule
A new method to BaseComponent called announceEventInModule().  The BaseComponent is 
available to filter, listener, plugins and the new properties constructs.  You can use
this method to announces events in other modules.

Example:
<cfset announceEventInModule("moduleName", "eventName", arguments.event.getArgs()) />

(2007-04-24 pfarrell)

* Module Support
Please see the documentation for more information.
(2007-04-24 kwiersma & pfarrell)

* Modules Relative File Paths
You can specify a relative path to your module file.  This works in the same manner 
as relative paths for includes (see below).
(2007-08-09 pfarrell)

* Complex Properties To Configure Time Parameters
Please see the documentation for more information.
(2007-02-25 pfarrell) 

* Redirect statusTypes
Added new optional attribute to the redirect command to more than just http stauts 302 
redirects. The new attributes is:
- statusType [permanent|temporary|prg] defaults to temporary

Permanent = 301 http status
Temporary = 302 http status (this is what cflocation does)
PRG = 303 http status (PRG = post-redirect-get routine which is a common idiom)
(2007-02-25 pfarrell)

* Include Tag Support
You can now use the includes section and include tag in your Mach II XML config file to 
dynamically included anonther configuration file. The include file is specificed using 
the file attribute of the include tag and is relative to the application root or mapping.

Since you cannot define duplicate listeners, filters, plugins, events or views there may 