@@ -4,7 +4,13 @@ Copyright: GreatBizTools, LLC
 Author: Peter J. Farrell (peter@mach-ii.com)
 $Id: build.xml 6362 2007-09-07 03:06:02Z pfarrell $
 
+Requirements:
+- ANT 1.5+
+- Apache Net-Commons (if using FTP options)
+- SVNAnt taske
+
 Notes:
+
 -->
 <project
 	name="Mach-II Framework"
@@ -16,9 +22,9 @@ Notes:
 	<!-- Properties -->
 	<property name="dest" location="./dest"/>
 	<property name="zip" location="./zip"/>
-	<property name="nightly" location=""/>
 	<property name="majorVersion" value="1-5-0"/>
 	<property name="baseSvnUrl" value="http://svn.mach-ii.com/framework/${majorVersion}/"/>
+	<property name="debug" value="false"/>
 	
 	<property name="ftp.server" value="mach-ii.com"/>
 	<property name="ftp.user" value="machii"/>
@@ -36,77 +42,103 @@ Notes:
 	
 	<!-- Targets -->
 	<target name="clean">
-		<echo message="---------------------------------------------" />
-		<echo message="Cleaning" />
-		<echo message="---------------------------------------------" />
+		<echo message="---------------------------------------------"/>
+		<echo message="Cleaning"/>
+		<echo message="---------------------------------------------"/>
 		<delete dir="${dest}"/>
 		<delete dir="${zip}"/>
 	</target>
 
 	<target name="build" depends="clean">
-		<echo message="---------------------------------------------" />
-		<echo message="Creating a build" />
-		<echo message="---------------------------------------------" />
+		<echo message="---------------------------------------------"/>
+		<echo message="Creating a build"/>
+		<echo message="---------------------------------------------"/>
 		<mkdir dir="${dest}"/>
+		<echo message="Gettting last commit revision number"/>
 		<svn>
 			<status path="${basedir}" lastChangedRevisionProperty="lastCommitRevision" />
 		</svn>
+		<echo message="Copying files to dest"/>
 		<copy todir="${dest}/MachII/"
-			verbose="true">
+			verbose="${debug}">
 			<fileset dir="${basedir}">
-				<exclude name="build.xml"/>
 				<exclude name="dest/"/>
 				<exclude name="zip/"/>
-				<exclude name="secure/"/>
 			</fileset>
 			<filterset begintoken="@" endtoken="@">
-				<filter token="minorVersion" value="${lastCommitRevision}" />
+				<filter token="minorVersion" value="${lastCommitRevision}"/>
 			</filterset>
 		</copy>
-		<echo message="Last commit revision '${lastCommitRevision}'"/>
+		<echo message="Making copies of CHANGELOG, LICENSE, NOTICE and README to .txt files for windows"/>
+		<copy file="${dest}/MachII/CHANGELOG"
+			tofile="${dest}/MachII/CHANGELOG.txt"
+			verbose="${debug}"/>
+		<copy file="${dest}/MachII/LICENSE"
+			tofile="${dest}/MachII/LICENSE.txt"
+			verbose="${debug}"/>
+		<copy file="${dest}/MachII/NOTICE"
+			tofile="${dest}/MachII/NOTICE.txt"
+			verbose="${debug}"/>
+		<copy file="${dest}/MachII/README"
+			tofile="${dest}/MachII/README.txt"
+			verbose="${debug}"/>
+		<echo message="Built as version '${lastCommitRevision}'"/>
 	</target>
 	
 	<target name="buildDuckTyped" depends="build">
-		<echo message="---------------------------------------------" />
-		<echo message="Duck typing the build" />
-		<echo message="---------------------------------------------" />		
+		<echo message="---------------------------------------------"/>
+		<echo message="Duck typing the build"/>
+		<echo message="---------------------------------------------"/>
+		<echo message="Regexing 'returntype' attribute from cffunctions"/>
 		<replaceregexp match="(cffunction.*?)([ ]?returntype)[ ]*?=[ ]*?(.)(.*?)\3[ ]?"
 			replace="\1 "
 			flags="igm">
 			<fileset dir="${dest}"
 				includes="**/*.cfc"/>
 	   </replaceregexp>
-
+		<echo message="Regexing 'required' attribute from cfarguments"/>
 	   <replaceregexp match="(cfargument.*?)([ ]?required)[ ]*?=[ ]*?(.)(.*?)\3[ ]?"
 		   replace="\1 "
 			flags="igm">
 		   	<fileset dir="${dest}"
 	   			includes="**/*.cfc"/>
 	   </replaceregexp>
-
+		<echo message="Regexing 'type' attribute from cfarguments"/>
 		<replaceregexp match="(cfargument.*?)([ ]?type)[ ]*?=[ ]*?(.)(.*?)\3[ ]?"
 			replace="\1 "
 			flags="igm">
 	      	<fileset dir="${dest}"
 	      		includes="**/*.cfc"/>
 	   </replaceregexp>
-		<echo message="Created duck typed build located in '${dest}'."/>
+		<echo message="---------------------------------------------"/>
+		<echo message="Created duck typed build located in '${dest}'"/>
+		<echo message="---------------------------------------------"/>
 	</target>
 	
 	<target name="zip" depends="build">
-		<echo message="---------------------------------------------" />
-		<echo message="Building zip" />
-		<echo message="---------------------------------------------" />
+		<echo message="---------------------------------------------"/>
+		<echo message="Zipping the build"/>
+		<echo message="---------------------------------------------"/>
 		<mkdir dir="${zip}"/>
 		<zip destfile="${zip}/MachII_${majorVersion}.zip"
 			basedir="${dest}"/>
 		<checksum file="${zip}/MachII_${majorVersion}.zip"/>
 	</target>
 	
+	<target name="zipDuckTyped" depends="buildDuckTyped">
+		<echo message="---------------------------------------------"/>
+		<echo message="Zipping the duck typed build"/>
+		<echo message="---------------------------------------------"/>
+		<mkdir dir="${zip}"/>
+		<zip destfile="${zip}/MachII_${majorVersion}_ducktyped.zip"
+			basedir="${dest}"/>
+		<checksum file="${zip}/MachII_${majorVersion}_ducktyped.zip"/>
+	</target>
+	
 	<target name="zipNightly" depends="build">
-		<echo message="---------------------------------------------" />
-		<echo message="Building nightly zip" />
-		<echo message="---------------------------------------------" />
+		<echo message="---------------------------------------------"/>
+		<echo message="Building nightly zip"/>
+		<echo message="---------------------------------------------"/>
 		<mkdir dir="${zip}"/>
 		<tstamp>
 			<format property="formattedDatetime" pattern="yyyy-MM-dd"/>
@@ -119,27 +151,27 @@ Notes:
 	<target name="ftp-init">
 		<input addProperty="ftp.password"
 			message="Please enter the password for FTP user named '${ftp.user}':"/>
-		<fail unless="ftp.password">You must set the ftp.password property for ftp (usually as command line arg -Dftp.password=YOURPWD).</fail>
+		<fail unless="ftp.password">You must set the ftp.password property for ftp as command line arg (e.g. -Dftp.password=YOURPWD) or input the password if you have manually run this target.</fail>
 	</target>
 	
 	<target name="ftp-zipNightly" depends="ftp-init,zipNightly">
-		<echo message="---------------------------------------------" />
+		<echo message="---------------------------------------------"/>
 		<echo message="FTP-ing nightly build" />
-		<echo message="---------------------------------------------" />
+		<echo message="---------------------------------------------"/>
 		<ftp server="${ftp.server}"
 			userid="${ftp.user}"
 			password="${ftp.password}"
 			action="put"
 			remotedir="${ftp.dir}"
-			verbose="true">
+			verbose="${debug}">
 			<fileset refid="ftp.upload.fileset"/>
 		</ftp>
 	</target>
 	
 	<target name="branch">
-		<echo message="---------------------------------------------" />
+		<echo message="---------------------------------------------"/>
 		<echo message="Creating a branch" />
-		<echo message="---------------------------------------------" />
+		<echo message="---------------------------------------------"/>
 		<input addproperty="branchName"
 			message="Please define a name for this branch:"/>
 		<input addproperty="revision"
